# cpa-bridge

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.tsx  app.css  bridge-conversion.ts  bridge-dashboard.tsx  bridge-state.ts  dashboard-panels.tsx  push-progress.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_update.rs  lib.rs  main.rs  push_command.rs  settings.rs
src-tauri/src/commands/: conversion.rs
src-tauri/src/domain/: cpa.rs  jwt.rs  mod.rs  sub2api.rs
src-tauri/src/push/: account_keys.rs  account_list_query.rs  client.rs  mod.rs
src-tauri/windows/: hooks.nsh
