[package]
name = "cpa-bridge"
version = "0.1.0"
edition = "2021"

[lib]
name = "cpa_bridge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0", features = ["image-ico"] }
tauri-plugin-dialog = "2.0"
tauri-plugin-updater = "2.0"
time = { version = "0.3", features = ["formatting", "parsing"] }
